--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version>
+        </dependency>
+
+
     </dependencies>
 
 
