--- a/dingel-bilibili-service/pom.xml
+++ b/dingel-bilibili-service/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>dingel-bilibili-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+        </dependency>
     </dependencies>
 
 
