--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.2</version>
+        </dependency>
+
+
     </dependencies>
 
 
